[package]
name = "bagheera"
version = "0.1.0"
edition = "2018"
authors = ["Ujjwal<ujjwal.researcher@gmail.com>"]
repository = "https://github.com/ujjwal-researcher/bagheera.git"
description = "A Rust library for evaluating computer vision algorithms"
readme = "README.md"
keywords = ["computer vision", "evaluation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
fast-float = "0.2.0"

[dev-dependencies]
float-cmp = "0.9.0"

[lib]
name = "bagheera"
path = "src/lib.rs"
crate-type = ["lib"]
doc = true
doctest = true