[package]
name = "bagheera"
version = "0.1.0"
edition = "2018"
authors = ["Ujjwal<ujjwal.researcher@gmail.com>"]
repository = "https://github.com/ujjwal-researcher/bagheera.git"
description = "A Rust library for evaluating computer vision algorithms"
readme = "README.md"
keywords = ["computer vision", "evaluation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
fast-float = "0.2.0"
log = "0.4.14"
plain_path = "0.1.0"
serde = "1.0.129"
fern = { version = "0.6.0", optional = true }
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
float-cmp = "0.9.0"
rand = "0.8.4"

[lib]
name = "bagheera"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]
doc = true
doctest = true

[[bin]]
name = "bagheera"
path = "src/main.rs"
required-features = ["build-binary"]

[features]
build-binary = ["fern", "chrono"]